--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/UTC.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Portal informativo de la carrera de Ingeniería en Sistemas de información." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoSistema.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Portal informativo UTC - La Maná</title>
